Convert from RestTemplate to RestClient